# minimum_wgpu_web_example

2d_l/2d_hard_shadows/: index.js
2d_l/2d_soft_shadows/: index.html  index.js
my_workspace/: Cargo.toml
my_workspace/my_app/: Cargo.toml
my_workspace/my_app/src/: main.rs
my_workspace/my_macro/: Cargo.toml
my_workspace/my_macro/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: framework.rs  lib.rs  main.rs
webpack/: README.md  package.json
webpack/js/: index.js
webpack/static/: index.html
