[package]
name = "wgpu-wasm-test"
description = "wgpu + wasm test"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
glam = "0.28"
console_log = "1.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
winit = { version = "0.29"}
wgpu = { version = "22.0.0" }
log = "0.4"
cfg-if = "1"
env_logger = "0.11"
web-time = "0.2.4"
pollster = "0.3"
fern = "0.6"
[dependencies.web-sys]
version = "0.3.61"

features = [
  'console',
  'Location',
  'HtmlCanvasElement'
]
[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
